--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.0.0",
+    "@angular/common": "^4.1.3",
     "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
+    "@angular/core": "^4.1.3",
+    "@angular/forms": "^4.1.3",
     "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser": "^4.1.3",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angularfire2": "^4.0.0-rc.0",
     "core-js": "^2.4.1",
-    "ng2-bootstrap": "^1.6.3",
+    "firebase": "4.0.0",
+    "ng2-bootstrap":"^1.6.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
