--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "angularfire2": "^4.0.0-rc.0",
     "core-js": "^2.4.1",
     "firebase": "4.0.0",
-    "ng2-bootstrap":"^1.6.3",
+    "firebase-functions": "^0.5.7",
+    "ng2-bootstrap": "^1.6.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
