enroll function in course: updates progress to 10% and changes image to enroll; finish function in course: updates progress to 100% and changes image to finish

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "firebase-functions": "^0.5.7",
     "ng2-bootstrap": "^1.6.3",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "promise-polyfill": "^6.0.2",
+    "firebase-admin": "^4.2.1"
   },
   "devDependencies": {
     "@angular/cli": "1.0.1",
