--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "@angular/platform-browser": "^4.1.3",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-localstorage": "^0.4.0",
     "angularfire2": "^4.0.0-rc.0",
     "core-js": "^2.4.1",
     "firebase": "4.0.0",
+    "firebase-admin": "^4.2.1",
     "firebase-functions": "^0.5.7",
     "ng2-bootstrap": "^1.6.3",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
     "promise-polyfill": "^6.0.2",
-    "firebase-admin": "^4.2.1"
+    "rxjs": "^5.1.0",
+    "typings": "^2.1.1",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.0.1",
